# linkedin-scraper-tool

./: Dockerfile  design.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/scraper/: AuthStatus.tsx  ResultsRenderer.tsx  SearchForm.tsx
frontend/src/components/scraper/cards/: CompanyCard.tsx  JobCard.tsx  PersonCard.tsx  ProfileCard.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
frontend/src/lib/: api.ts
linkedin/: .gitignore  CLAUDE.md  Dockerfile  README.md  api.py  models.py  pyproject.toml  requirements.txt  scraper.py  scraper_debug.html  server.py  smithery.yaml  stealth_browser.py  test_live.py
